--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <div class="logo">Prueba con Git</div>
         <nav>
           <a href="#">Inicio</a>
-          <a href="#">Galeria</a>
-          <a href="#">Nosotros</a>
-          <a href="#">Contacto</a>
+          <a href="#">HTML</a>
+          <a href="#">CSS</a>
+          <a href="#">SQL</a>
+          <a href="#">C#</a>
+          <a href="#">Contactos</a>
         </nav>
       </div>
     </header>
