--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <header>
       <div class="wrapper">
-        <div class="logo">Prueba con Git</div>
+        <div class="logo">Programacion Basica</div>
         <nav>
           <a href="#">Inicio</a>
-          <a href="#">HTML</a>
+          <a href="HTML.html">HTML</a>
           <a href="#">CSS</a>
           <a href="#">SQL</a>
           <a href="#">C#</a>
@@ -22,6 +22,7 @@
       </div>
     </header>
     <section class="container wrapper">
+
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
